fixed text-overflow bug

--- a/static/page.less
+++ b/static/page.less
@@ -106,23 +106,13 @@
   text-overflow: ellipsis;
 }
 
-/*
+
 .child-body {
   white-space: nowrap;
-  width: 420px;
-  display: table;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-*/
 
-.child-body {
-    border: solid 2px blue;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 50px;
-}
 
 .child-highlight {
   background-color: #EEE;
